🎨FIX: Quiz card alignment

--- a/src/screens/OneTimeDashboard.css
+++ b/src/screens/OneTimeDashboard.css
@@ -9,11 +9,44 @@
 	justify-content: space-evenly;
 	
 }
+.one-time-dashboard{
+    height: 100vh;
+    background-color: var(--secondary);
+}
 .vertical-line {
 	border-left: 3px solid var(--secondary);
 	border-image: linear-gradient(to bottom, var(--secondary), var(--accent-pink))
 		1 100%;
 	height: 200px;
+}
+.dash-btns{
+    flex: 1;
+	margin-left: 140px;
+	display: flex;
+	text-align: left;
+	flex-direction: column;
+	align-content: space-between;
+	align-items: stretch;
+}
+
+.blob-svg{
+    flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-content: flex-end;
+}
+.dash-btns .create-quiz,
+.dash-btns .join-quiz{
+	margin: 10px;
+	padding: 12px;
+	font-size: 20px;
+	width: 230px;
+	transition: 0.5s;
+	border-radius: 50px;
+	border: 3px solid var(--accent-pink);
+	background: none;
+    color: var(--primary);
+    box-shadow: none;
 }
 .create-quiz,
 .join-quiz {
@@ -44,6 +77,13 @@
 .create-quiz:active,
 .join-quiz:active {
 	transform: translateY(4px);
+}
+.wlcm-msg{
+	color:var(--primary);
+    font-size: 35px;
+	font-weight: 500;
+	margin: 40px 0px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 @media (max-width: 768px) {
 	#dashboard-content {
